[gd_scene load_steps=33 format=3 uid="uid://bcurxmcaac34g"]

[ext_resource type="Script" path="res://scripts/game_panel.gd" id="1_ithmw"]
[ext_resource type="PackedScene" uid="uid://dp4jbk4quxcti" path="res://minigame.tscn" id="2_3p1a6"]
[ext_resource type="Texture2D" uid="uid://viyjujptesg8" path="res://art/imagens finais/updatebotoes.png" id="3_ii8vp"]
[ext_resource type="Script" path="res://scripts/panel_button.gd" id="4_aqx5j"]
[ext_resource type="Script" path="res://reset_buttons.gd" id="4_c6h3a"]

[sub_resource type="Animation" id="Animation_ioogg"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nnwx"]
_data = {
"fade_in": SubResource("Animation_ioogg")
}

[sub_resource type="LabelSettings" id="LabelSettings_qwpfc"]
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventKey" id="InputEventKey_s52pp"]
device = -1
pressed = true
keycode = 49
physical_keycode = 49
key_label = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_n8ibe"]
events = [SubResource("InputEventKey_s52pp")]

[sub_resource type="InputEventKey" id="InputEventKey_j57pt"]
device = -1
pressed = true
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_qq8ox"]
events = [SubResource("InputEventKey_j57pt")]

[sub_resource type="InputEventKey" id="InputEventKey_r5ep5"]
device = -1
pressed = true
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_olcsm"]
events = [SubResource("InputEventKey_r5ep5")]

[sub_resource type="InputEventKey" id="InputEventKey_h5hs3"]
device = -1
pressed = true
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_l2s2g"]
events = [SubResource("InputEventKey_h5hs3")]

[sub_resource type="InputEventKey" id="InputEventKey_rrslp"]
device = -1
pressed = true
keycode = 53
unicode = 53

[sub_resource type="Shortcut" id="Shortcut_ejyd2"]
events = [SubResource("InputEventKey_rrslp")]

[sub_resource type="InputEventKey" id="InputEventKey_hhukl"]
device = -1
pressed = true
keycode = 54
unicode = 54

[sub_resource type="Shortcut" id="Shortcut_ppnr0"]
events = [SubResource("InputEventKey_hhukl")]

[sub_resource type="InputEventKey" id="InputEventKey_w5d15"]
device = -1
pressed = true
keycode = 55
unicode = 55

[sub_resource type="Shortcut" id="Shortcut_gn1tt"]
events = [SubResource("InputEventKey_w5d15")]

[sub_resource type="InputEventKey" id="InputEventKey_un0eq"]
device = -1
pressed = true
keycode = 56
unicode = 56

[sub_resource type="Shortcut" id="Shortcut_8ajxx"]
events = [SubResource("InputEventKey_un0eq")]

[sub_resource type="InputEventKey" id="InputEventKey_lgil1"]
device = -1
pressed = true
keycode = 57
unicode = 57

[sub_resource type="Shortcut" id="Shortcut_673mg"]
events = [SubResource("InputEventKey_lgil1")]

[sub_resource type="InputEventKey" id="InputEventKey_ocbkf"]
device = -1
pressed = true
keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_5knx5"]
events = [SubResource("InputEventKey_ocbkf")]

[sub_resource type="InputEventKey" id="InputEventKey_cex6p"]
device = -1
pressed = true
keycode = 87
unicode = 119

[sub_resource type="Shortcut" id="Shortcut_fi1w1"]
events = [SubResource("InputEventKey_cex6p")]

[sub_resource type="InputEventKey" id="InputEventKey_7kej0"]
device = -1
pressed = true
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_e2x0k"]
events = [SubResource("InputEventKey_7kej0")]

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -964.0
offset_top = -549.0
offset_right = 956.0
offset_bottom = 531.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ithmw")

[node name="Minigame" parent="." instance=ExtResource("2_3p1a6")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Fade-in" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 490.0
offset_right = 1925.0
offset_bottom = 1567.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade-in"]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_8nnwx")
}

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 494.0
offset_right = 1930.0
offset_bottom = 1574.0
texture = ExtResource("3_ii8vp")
script = ExtResource("4_c6h3a")

[node name="ColorRect0" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 750.0
offset_top = 865.0
offset_right = 796.0
offset_bottom = 908.0

[node name="Label" type="Label" parent="TextureRect/ColorRect0"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 38.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect0"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 46.0
offset_bottom = 44.0
script = ExtResource("4_aqx5j")

[node name="ColorRect1" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 772.0
offset_top = 918.0
offset_right = 827.0
offset_bottom = 959.0

[node name="Label" type="Label" parent="TextureRect/ColorRect1"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 42.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 56.0
offset_bottom = 42.0
shortcut = SubResource("Shortcut_n8ibe")
script = ExtResource("4_aqx5j")

[node name="ColorRect2" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 813.0
offset_top = 866.0
offset_right = 858.0
offset_bottom = 908.0

[node name="Label" type="Label" parent="TextureRect/ColorRect2"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 43.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 44.0
offset_bottom = 44.0
shortcut = SubResource("Shortcut_qq8ox")
script = ExtResource("4_aqx5j")

[node name="ColorRect3" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 871.0
offset_top = 865.0
offset_right = 915.0
offset_bottom = 907.0

[node name="Label" type="Label" parent="TextureRect/ColorRect3"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 42.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 44.0
offset_bottom = 43.0
shortcut = SubResource("Shortcut_olcsm")
script = ExtResource("4_aqx5j")

[node name="ColorRect4" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 870.0
offset_top = 917.0
offset_right = 915.0
offset_bottom = 959.0

[node name="Label" type="Label" parent="TextureRect/ColorRect4"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 43.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 45.0
offset_bottom = 43.0
shortcut = SubResource("Shortcut_l2s2g")
script = ExtResource("4_aqx5j")

[node name="ColorRect5" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 933.0
offset_top = 863.0
offset_right = 976.0
offset_bottom = 909.0

[node name="Label" type="Label" parent="TextureRect/ColorRect5"]
layout_mode = 0
offset_left = -2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 44.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect5"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 45.0
offset_bottom = 45.0
shortcut = SubResource("Shortcut_ejyd2")
script = ExtResource("4_aqx5j")

[node name="ColorRect6" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 933.0
offset_top = 917.0
offset_right = 977.0
offset_bottom = 960.0

[node name="Label" type="Label" parent="TextureRect/ColorRect6"]
layout_mode = 0
offset_right = 43.0
offset_bottom = 43.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect6"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 45.0
offset_bottom = 43.0
shortcut = SubResource("Shortcut_ppnr0")
script = ExtResource("4_aqx5j")

[node name="ColorRect7" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 996.0
offset_top = 866.0
offset_right = 1038.0
offset_bottom = 908.0

[node name="Label" type="Label" parent="TextureRect/ColorRect7"]
layout_mode = 0
offset_right = 41.0
offset_bottom = 44.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect7"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 43.0
offset_bottom = 43.0
shortcut = SubResource("Shortcut_gn1tt")
script = ExtResource("4_aqx5j")

[node name="ColorRect8" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 994.0
offset_top = 918.0
offset_right = 1037.0
offset_bottom = 959.0

[node name="Label" type="Label" parent="TextureRect/ColorRect8"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 41.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect8"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 44.0
offset_bottom = 42.0
shortcut = SubResource("Shortcut_8ajxx")
script = ExtResource("4_aqx5j")

[node name="ColorRect9" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 1055.0
offset_top = 865.0
offset_right = 1100.0
offset_bottom = 908.0

[node name="Label" type="Label" parent="TextureRect/ColorRect9"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 43.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect9"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 46.0
offset_bottom = 44.0
shortcut = SubResource("Shortcut_673mg")
script = ExtResource("4_aqx5j")

[node name="ColorRect10" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 1056.0
offset_top = 918.0
offset_right = 1102.0
offset_bottom = 961.0

[node name="Label" type="Label" parent="TextureRect/ColorRect10"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 43.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect10"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 45.0
offset_bottom = 43.0
shortcut = SubResource("Shortcut_5knx5")
script = ExtResource("4_aqx5j")

[node name="ColorRect11" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 1120.0
offset_top = 866.0
offset_right = 1163.0
offset_bottom = 908.0

[node name="Label" type="Label" parent="TextureRect/ColorRect11"]
layout_mode = 0
offset_right = 43.0
offset_bottom = 42.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect11"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 43.0
offset_bottom = 42.0
shortcut = SubResource("Shortcut_fi1w1")
script = ExtResource("4_aqx5j")

[node name="ColorRect12" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 1119.0
offset_top = 918.0
offset_right = 1164.0
offset_bottom = 960.0

[node name="Label" type="Label" parent="TextureRect/ColorRect12"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 42.0
text = "N"
label_settings = SubResource("LabelSettings_qwpfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/ColorRect12"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 45.0
offset_bottom = 42.0
shortcut = SubResource("Shortcut_e2x0k")
script = ExtResource("4_aqx5j")

[connection signal="lost" from="Minigame" to="." method="_on_Minigame_lost"]
[connection signal="meter_changed" from="Minigame" to="." method="_on_minigame_meter_changed"]
[connection signal="progress" from="Minigame" to="." method="_on_minigame_progress"]
[connection signal="reset" from="Minigame" to="." method="_on_minigame_reset"]
[connection signal="start" from="Minigame" to="." method="_on_minigame_start"]
[connection signal="win" from="Minigame" to="." method="_on_Minigame_win"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
